--- a/article/formatting-shortcuts/index.html
+++ b/article/formatting-shortcuts/index.html
@@ -43,7 +43,9 @@
 }
 </script>
 <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript></head>
+<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+
+<script src="https://analytics.ahrefs.com/analytics.js" data-key="zN36a/kTjV1Q4yiQL3uICA" async></script></head>
 <body>
 
     <header class="site-header">
