--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
                     <p>Step-by-step visual guide to grouping rows in Excel. See exactly where to click and how to...</p>
                 </div>
             </a>
+            <a href="https://cellreference.com/article/how-to-unhide-all-rows-in-excel/" class="article-card">
+                <img src="https://cellreference.com/images/excel/troubleshooting/unhide-rows/card_wide.svg" alt="How to Unhide All Rows in Excel: Step-by-Step Guide">
+                <div class="article-card-content">
+                    <span class="article-meta">Last updated: 07 January 2026</span>
+                    <h3>How to Unhide All Rows in Excel: Step-by-Step Guide</h3>
+                    <p>Learn how to unhide all rows in Excel with simple step-by-step instructions. This guide shows...</p>
+                </div>
+            </a>
         </div>
         <a href="https://cellreference.com/articles/" class="view-all-btn">View All Articles →</a>
     </section>
@@ -172,6 +180,12 @@
                         <img src="https://cellreference.com/images/excel/features/grouping/card.svg" alt="Grouping">
                     </div>
                     <div class="category-name">Excel › Features › Grouping</div>
+                </a>
+                <a href="https://cellreference.com/category/excel/troubleshooting" class="category-card">
+                    <div class="category-img">
+                        <img src="https://cellreference.com/images/excel/troubleshooting/unhide-rows/card.svg" alt="Troubleshooting">
+                    </div>
+                    <div class="category-name">Excel › Troubleshooting</div>
                 </a>
         </div>
         <a href="https://cellreference.com/categories/" class="view-all-btn">View All Categories →</a>
