--- a/about/index.html
+++ b/about/index.html
@@ -140,7 +140,8 @@
     };
     </script>
 
-    <main class="content">
+    <div class="page-wrapper">
+        <main class="content">
 <article class="article-page">
     <header class="article-header">
         <h1>Cell Reference - About Cell Reference and Contact Information</h1>
@@ -153,6 +154,7 @@
 <p>For questions, feedback, or suggestions, please reach out via email at info@cellreference.com.</p>
     </div>
 </article>
+        </main>
 
         <footer class="site-footer">
             <span class="copyright">© HM One LLC</span>
@@ -162,7 +164,7 @@
                 <a href="https://cellreference.com/terms/">Terms</a>
             </nav>
         </footer>
-    </main>
+    </div>
 
     
     <script>
