--- a/article/how-to-unhide-all-rows-in-excel/index.html
+++ b/article/how-to-unhide-all-rows-in-excel/index.html
@@ -161,7 +161,8 @@
     };
     </script>
 
-    <main class="content">
+    <div class="page-wrapper">
+        <main class="content">
 <div class="article-wrapper">
     <div class="article-col-left">
         <nav class="article-toc" id="article-toc">
@@ -237,6 +238,7 @@
 
     <div class="article-col-right"></div>
 </div>
+        </main>
 
         <footer class="site-footer">
             <span class="copyright">© HM One LLC</span>
@@ -246,7 +248,7 @@
                 <a href="https://cellreference.com/terms/">Terms</a>
             </nav>
         </footer>
-    </main>
+    </div>
 
 <script>
 // Generate TOC from headings
