--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
     };
     </script>
 
-    <main class="content">
+    <div class="page-wrapper">
+        <main class="content">
 <div class="homepage">
     <section class="welcome">
         <h1>Welcome to Cell Reference</h1>
@@ -191,6 +192,7 @@
         <a href="https://cellreference.com/categories/" class="view-all-btn">View All Categories →</a>
     </section>
 </div>
+        </main>
 
         <footer class="site-footer">
             <span class="copyright">© HM One LLC</span>
@@ -200,7 +202,7 @@
                 <a href="https://cellreference.com/terms/">Terms</a>
             </nav>
         </footer>
-    </main>
+    </div>
 
     
     <script>
