--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -140,7 +140,8 @@
     };
     </script>
 
-    <main class="content">
+    <div class="page-wrapper">
+        <main class="content">
 <article class="article-page">
     <header class="article-header">
         <h1>Cell Reference - Privacy Policy for CellReference.com</h1>
@@ -192,6 +193,7 @@
 <p>If you have any questions regarding privacy while using the Website, or have questions about the practices, please contact the Service Provider via email at legal@cellreference.com.</p>
     </div>
 </article>
+        </main>
 
         <footer class="site-footer">
             <span class="copyright">© HM One LLC</span>
@@ -201,7 +203,7 @@
                 <a href="https://cellreference.com/terms/">Terms</a>
             </nav>
         </footer>
-    </main>
+    </div>
 
     
     <script>
