--- a/tags.html
+++ b/tags.html
@@ -140,10 +140,12 @@
     };
     </script>
 
-    <main class="content">
+    <div class="page-wrapper">
+        <main class="content">
     <h2>Tags for Cell Reference</h2>
     <ul>
     </ul>
+        </main>
 
         <footer class="site-footer">
             <span class="copyright">© HM One LLC</span>
@@ -153,7 +155,7 @@
                 <a href="https://cellreference.com/terms/">Terms</a>
             </nav>
         </footer>
-    </main>
+    </div>
 
     
     <script>
