--- a/terms/index.html
+++ b/terms/index.html
@@ -140,7 +140,8 @@
     };
     </script>
 
-    <main class="content">
+    <div class="page-wrapper">
+        <main class="content">
 <article class="article-page">
     <header class="article-header">
         <h1>Cell Reference - Terms of Service for CellReference.com</h1>
@@ -186,6 +187,7 @@
 <p>If you have any questions about these Terms of Service, please contact the Service Provider via email at legal@cellreference.com.</p>
     </div>
 </article>
+        </main>
 
         <footer class="site-footer">
             <span class="copyright">© HM One LLC</span>
@@ -195,7 +197,7 @@
                 <a href="https://cellreference.com/terms/">Terms</a>
             </nav>
         </footer>
-    </main>
+    </div>
 
     
     <script>
